--- a/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
+++ b/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
@@ -1,19 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>JessenSoft.AxentFlow.Web</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+<MudThemeProvider>
+    <MudDialogProvider />
+    <MudSnackbarProvider>
+        <MudLayout>
+            <MudAppBar Color="Color.Primary">AxentFlow</MudAppBar>
+            <MudMainContent>
+                @Body
+            </MudMainContent>
+        </MudLayout>
+    </MudSnackbarProvider>
+</MudThemeProvider>
