--- a/src/JessenSoft.AxentFlow.Web/_Imports.razor
+++ b/src/JessenSoft.AxentFlow.Web/_Imports.razor
@@ -1,10 +1,6 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
+@using System.Threading.Tasks
+@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.JSInterop
-@using JessenSoft.AxentFlow.Web
-@using JessenSoft.AxentFlow.Web.Shared
+@using MudBlazor
+@using JessenSoft.AxentFlow.UI.ViewModels
