--- a/src/JessenSoft.AxentFlow.Web/_Imports.razor
+++ b/src/JessenSoft.AxentFlow.Web/_Imports.razor
@@ -4,3 +4,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
 @using JessenSoft.AxentFlow.UI.ViewModels
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
+@using JessenSoft.AxentFlow.Web.Shared
