--- a/src/JessenSoft.AxentFlow.Web/Pages/Index.razor
+++ b/src/JessenSoft.AxentFlow.Web/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Start</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Willkommen bei AxentFlow 👋</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>Hier beginnt dein Workflow-Erlebnis.</p>
