--- a/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
+++ b/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
@@ -1,13 +1,32 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider>
-    <MudDialogProvider />
-    <MudSnackbarProvider>
-        <MudLayout>
-            <MudAppBar Color="Color.Primary">AxentFlow</MudAppBar>
-            <MudMainContent>
-                @Body
-            </MudMainContent>
-        </MudLayout>
-    </MudSnackbarProvider>
-</MudThemeProvider>
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider MaxDisplayedSnackbars="3" PreventDuplicates="true" />
+
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@DrawerToggle" />
+        <MudText Typo="Typo.h6">Axent Flow</MudText>
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+    </MudAppBar>
+
+        <MudDrawer @bind-Open="@_drawerOpen" Elevation="1" ClipMode="DrawerClipMode.Always" Breakpoint="Breakpoint.Sm" Variant="@DrawerVariant.Mini">
+            <NavMenu />
+        </MudDrawer>
+
+    <MudContainer Class="mt-4 px-4">
+        @Body
+    </MudContainer>
+</MudLayout>
+
+@code {
+    private bool _drawerOpen = false;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
