--- a/src/JessenSoft.AxentFlow.Web/_Imports.razor
+++ b/src/JessenSoft.AxentFlow.Web/_Imports.razor
@@ -3,9 +3,10 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
+@using MudBlazor.Components
+@using MudBlazor.Utilities
 @using JessenSoft.AxentFlow.UI.ViewModels
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
 @using JessenSoft.AxentFlow.Web.Shared
