added workflows page with dummy data

--- a/src/JessenSoft.AxentFlow.Web/Shared/NavMenu.razor
+++ b/src/JessenSoft.AxentFlow.Web/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">
         Dashboard
     </MudNavLink>
-    <MudNavLink Href="/" Icon="@Icons.Material.Filled.AutoFixHigh">
+    <MudNavLink Href="/workflows" Icon="@Icons.Material.Filled.AutoFixHigh">
         Workflows
     </MudNavLink>
     <MudNavLink Href="/" Icon="@Icons.Material.Filled.History">
