--- a/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
+++ b/src/JessenSoft.AxentFlow.Web/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 <MudSnackbarProvider MaxDisplayedSnackbars="3" PreventDuplicates="true" />
 
 <MudLayout>
-    <MudAppBar Elevation="1">
+    <MudAppBar Elevation="1" Fixed="true">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@DrawerToggle" />
         <MudText Typo="Typo.h6">Axent Flow</MudText>
         <MudSpacer />
@@ -17,9 +17,9 @@
             <NavMenu />
         </MudDrawer>
 
-    <MudContainer Class="mt-4 px-4">
+    <MudMainContent Class="mt-4 px-4">
         @Body
-    </MudContainer>
+    </MudMainContent>
 </MudLayout>
 
 @code {
