--- a/src/JessenSoft.AxentFlow.Web/_Imports.razor
+++ b/src/JessenSoft.AxentFlow.Web/_Imports.razor
@@ -10,3 +10,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.Forms
 @using JessenSoft.AxentFlow.Web.Shared
+@using JessenSoft.AxentFlow.Core.Enums
