implemented basic workflow editor

--- a/src/JessenSoft.AxentFlow.Web/Shared/NavMenu.razor
+++ b/src/JessenSoft.AxentFlow.Web/Shared/NavMenu.razor
@@ -5,6 +5,9 @@
     <MudNavLink Href="/workflows" Icon="@Icons.Material.Filled.AutoFixHigh">
         Workflows
     </MudNavLink>
+    <MudNavLink Href="/workflows/designer" Icon="@Icons.Material.Filled.AutoGraph">
+        Workflow Designer
+    </MudNavLink>
     <MudNavLink Href="/" Icon="@Icons.Material.Filled.History">
         Ausführungen
     </MudNavLink>
